--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "bcash/chordpro-php",
     "description": "Parse, transpose and format (html,json,plaintext) ChordPro format for songs lyrics with chords.",
+    "version": "1.0.0",
     "type": "library",
     "require-dev": {
         "phpunit/phpunit": "^7.5"
